<resources>
    <string name="app_name">WiseHome</string>
    <string name="progress_loading_text">Loading...</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="your_rooms">Your rooms</string>
    <string name="room">Room:</string>
    <string name="edit">edit</string>
    <string name="lights">Lights</string>
    <string name="weather">Weather</string>
    <string name="temperature">Temperature</string>
    <string name="blinds">Blinds</string>
    <string name="state">State:</string>
    <string name="stop">STOP</string>
    <string name="humidity">Humidity</string>
    <string name="alarm_sensors">Alarm sensors</string>
    <string name="carbon_monoxide">Carbon monoxide</string>
    <string name="gases">Highly flammable gases</string>
    <string name="sth_wrong_check_internet_connection">Something went wrong. Check your internet connection and try again.</string>
    <string name="my_rooms">My Rooms</string>
    <string name="add_room">Add Room</string>
    <string name="add_device">Add device</string>
    <string name="logout">Logout</string>
    <string name="change_password">Change Password</string>
    <string name="add_account">Add Account</string>
    <string name="closed">CLOSED</string>
    <string name="partly_closed">PARTLY CLOSED</string>
    <string name="partly_close_underscore">PARTLY_CLOSED</string>
    <string name="moving">MOVING</string>
    <string name="opened">OPENED</string>
    <string name="unconfigured_devices">Unconfigured devices</string>
    <string name="light">Light</string>
    <string name="blind">Blind</string>
    <string name="alarm_sensor">Alarm sensor</string>
    <string name="weather_sensor">Weather sensor</string>
    <string name="check_if_you_chose_right_device">Check if you chose right device</string>
    <string name="selected_light_was_turned_on">Selected light is blinking</string>
    <string name="red_diode_on_selected_device_is_blinking">Diode on selected device is blinking</string>
    <string name="cancel">cancel</string>
    <string name="continue_word">continue</string>
    <string name="device_name">Device name</string>
    <string name="choose_room">Choose room:</string>
    <string name="do_you_want_to_add">Are you sure that you want to add</string>
    <string name="to_room">to room:</string>
    <string name="add">Add</string>
    <string name="device_configurated">Device configurated!</string>
    <string name="ok">OK</string>
    <string name="apply_color">Apply color</string>
    <string name="color_list">Color list</string>
    <string name="room_name">Room name</string>
    <string name="blank_edit_text_error">This field can not be blank</string>
    <string name="repeat_password">Repeat password</string>
    <string name="password_error_message">Password does not match to the confirm password.</string>
    <string name="automatic_mode">automatic mode</string>
    <string name="you_dont_have_any_rooms_yet">You don\'t have any rooms yet. \n Let's go to menu and add some!</string>
    <string name="We_havent_detect_any_unconfigured_device_in_your_area">We haven\'t detected any unconfigured device in your area. \n To configurate it you need to turn it on</string>
    <string name="authorization_error">Wrong username or password</string>
    <string name="username_already_exist">Username already exists</string>
    <string name="change">change</string>
    <string name="new_password">new password</string>
    <string name="confirm_new_password">repeat new password</string>
    <string name="old_password">old password</string>
    <string name="temperature_c">Temperature [°C]</string>
    <string name="humidity_proc">Humidity [%]</string>
    <string name="time">Time</string>
    <string name="invalid_old_password">old password is invalid</string>
    <string name="password_not_match">Password does not match to the confirm password</string>
    <string name="admin">Administrative priveleges</string>
    <string name="celsjusz">°C</string>
    <string name="percent">%</string>
</resources>

