<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.8"
        android:background="@color/colorPrimary"
        android:clickable="false" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:background="@drawable/white_with_blue_borders"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/do_you_want_to_add"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/selectedDeviceNameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/to_room"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/selectedRoomNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:text="?"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <com.rey.material.widget.Button
                android:id="@+id/cancelButton"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:layout_margin="20dp"
                android:background="@color/colorOrange"
                android:text="@string/cancel" />

            <com.rey.material.widget.Button
                android:id="@+id/addButton"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:layout_margin="20dp"
                android:background="@color/colorAccent"
                android:text="@string/add" />

        </LinearLayout>
    </LinearLayout>
</FrameLayout>