<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/toolbar" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:background="@color/colorGray"
            android:elevation="3dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/change_password"
            android:textSize="24sp" />

        <com.rey.material.widget.EditText
            android:id="@+id/oldPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:background="@android:color/transparent"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="@string/old_password"
            android:inputType="textPassword"
            android:textSize="14sp"
            android:touchscreenBlocksFocus="true"
            app:et_dividerColor="@color/colorGray"
            app:et_dividerErrorColor="@color/colorError"
            app:et_dividerHeight="2dp"
            app:et_labelEnable="true"
            app:et_labelTextColor="@color/colorAccent"
            app:et_supportMode="helper"
            app:et_supportTextErrorColor="@color/colorError" />

        <com.rey.material.widget.EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:background="@android:color/transparent"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="@string/new_password"
            android:imeOptions="actionSearch"
            android:inputType="textPersonName"
            android:textSize="14sp"
            android:touchscreenBlocksFocus="true"
            app:et_dividerColor="@color/colorGray"
            app:et_dividerErrorColor="@color/colorError"
            app:et_dividerHeight="2dp"
            app:et_labelEnable="true"
            app:et_labelTextColor="@color/colorAccent"
            app:et_supportMode="helper"
            app:et_supportTextErrorColor="@color/colorError" />


        <com.rey.material.widget.EditText
            android:id="@+id/passwordConfirmEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:background="@android:color/transparent"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="@string/confirm_new_password"
            android:imeOptions="actionSearch"
            android:inputType="textPassword"
            android:textSize="14sp"
            android:touchscreenBlocksFocus="true"
            app:et_dividerColor="@color/colorGray"
            app:et_dividerErrorColor="@color/colorError"
            app:et_dividerHeight="2dp"
            app:et_labelEnable="true"
            app:et_labelTextColor="@color/colorAccent"
            app:et_supportMode="helper"
            app:et_supportTextErrorColor="@color/colorError" />

        <com.rey.material.widget.Button
            android:id="@+id/changePasswordButton"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@color/colorAccent"
            android:text="@string/change"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <ListView
        android:id="@+id/drawerList"
        android:layout_width="280dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/colorPrimary"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp" />

</android.support.v4.widget.DrawerLayout>