<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/toolbar" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:background="@color/colorGray"
            android:elevation="3dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/add_device"
            android:textSize="24sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/colorAccentLight"
            android:gravity="center_vertical"
            android:paddingStart="20dp"
            android:text="@string/unconfigured_devices"
            android:textSize="24sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorLightGray" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/unconfigDevicesRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <com.rey.material.widget.TextView
        android:id="@+id/unconfigDevicesEmptyView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:gravity="center"
        android:visibility="gone"
        android:text="@string/We_havent_detect_any_unconfigured_device_in_your_area"
        android:textSize="18sp" />

    <include
        android:id="@+id/checkUnconfigDeviceDialog"
        layout="@layout/dialog_selected_device_highlight"
        android:visibility="gone" />

    <ListView
        android:id="@+id/drawerList"
        android:layout_width="280dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/colorPrimary"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp" />

</android.support.v4.widget.DrawerLayout>
