<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.8"
        android:background="@color/colorPrimary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:background="@drawable/white_with_blue_borders"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/add_room"
            android:textSize="24sp" />

        <com.rey.material.widget.EditText
            android:id="@+id/roomNameEditText"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="fill"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="@string/room_name"
            android:imeOptions="actionSearch"
            android:inputType="textPersonName"
            android:textSize="14sp"
            android:touchscreenBlocksFocus="true"
            app:et_dividerColor="@color/colorGray"
            app:et_dividerErrorColor="@color/colorError"
            app:et_dividerHeight="2dp"
            app:et_labelEnable="true"
            app:et_labelTextColor="@color/colorAccent"
            app:et_supportMode="helper"
            app:et_supportTextErrorColor="@color/colorError" />

        <com.rey.material.widget.Button
            android:id="@+id/addButton"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@color/colorAccent"
            android:text="@string/add"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

    </LinearLayout>
</FrameLayout>