<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <include layout="@layout/toolbar" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:background="@color/colorGray"
            android:elevation="3dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/add_device"
            android:textSize="24sp" />

        <com.rey.material.widget.EditText
            android:id="@+id/deviceNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:background="@android:color/transparent"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="@string/device_name"
            android:imeOptions="actionSearch"
            android:inputType="textPersonName"
            android:textSize="18sp"
            android:touchscreenBlocksFocus="true"
            app:et_dividerColor="@color/colorGray"
            app:et_dividerErrorColor="@color/colorError"
            app:et_dividerHeight="2dp"
            app:et_labelEnable="true"
            app:et_labelTextColor="@color/colorAccent"
            app:et_supportMode="helper"
            app:et_supportTextErrorColor="@color/colorError" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/colorAccentLight"
            android:gravity="center_vertical"
            android:paddingStart="20dp"
            android:text="@string/choose_room"
            android:textSize="24sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorAccent" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/roomsRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <include
        android:id="@+id/dialogMatchDeviceToRoom"
        layout="@layout/dialog_match_device_to_room"
        android:visibility="gone" />

    <include
        android:id="@+id/dialogDeviceConfigurated"
        layout="@layout/dialog_device_configurated"
        android:visibility="gone" />

    <ListView
        android:id="@+id/drawerList"
        android:layout_width="280dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/colorPrimary"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp" />

</android.support.v4.widget.DrawerLayout>