<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="80dp"
        android:layout_weight="2"
        android:src="@drawable/logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:text="@string/app_name"
        android:textSize="40sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="80dp"
        android:layout_marginEnd="60dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="10dp"
        android:layout_weight="4"
        android:background="@drawable/white_with_orange_borders"
        android:orientation="vertical">

        <com.rey.material.widget.EditText
            android:id="@+id/login_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="@string/login"
            android:imeOptions="actionSearch"
            android:inputType="textPersonName"
            android:textSize="14sp"
            android:touchscreenBlocksFocus="true"
            app:et_dividerColor="@color/colorGray"
            app:et_dividerErrorColor="@color/colorError"
            app:et_dividerHeight="2dp"
            app:et_labelEnable="true"
            app:et_labelTextColor="@color/colorDarkBlue"
            app:et_supportMode="helper"
            app:et_supportTextErrorColor="@color/colorError" />

        <com.rey.material.widget.EditText
            android:id="@+id/password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="@string/password"
            android:imeOptions="actionSearch"
            android:inputType="textPassword"
            android:textSize="14sp"
            android:touchscreenBlocksFocus="true"
            app:et_dividerColor="@color/colorGray"
            app:et_dividerErrorColor="@color/colorError"
            app:et_dividerHeight="2dp"
            app:et_labelEnable="true"
            app:et_labelTextColor="@color/colorDarkBlue"
            app:et_supportMode="helper"
            app:et_supportTextErrorColor="@color/colorError" />

        <com.rey.material.widget.Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="60dp"
            android:layout_marginStart="60dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:background="@drawable/white_with_blue_borders"
            android:text="@string/login"
            android:textAllCaps="true" />
    </LinearLayout>

</LinearLayout>